# WorkerManagerSystem

./: .gitignore  CMakeLists.txt  README.md
include/: boss.h  employee.h  manager.h  work.h  workerManager.h
src/: boss.cpp  employee.cpp  main.cpp  manager.cpp  workerManager.cpp
